# MO_VNFPP

./: .gitignore
paper/: appendix.tex  bibliography.bib  conclusions.tex  experiments.tex  introduction.tex  main.tex  optimisation.tex  problem_formulation.tex  related.tex  system_model.tex
paper/figures/: aa_expansion.tex  add_remove.tex  fat_tree.tex  mapping_flowchart.tex  original_loop.tex  simple_expansion.tex  swap.tex  unfolded_loop.tex
paper/graphs/comparison/: alg_fixed.tex  batch.sh  previous.tex  qm.tex  std.tex  stringer.tex
paper/supp/: main.tex
response_letter/: ae.tex  main.tex  reviewer1.tex  reviewer2.tex  reviewer3.tex
src/alg/: Cargo.toml  Config.yml
src/alg/src/: args.rs  cli.yml  fat_tree.rs  model.rs  service.rs
src/alg/src/optimisation/: bfdsu.rs  bfs.rs  esp_vdce.rs  ibea.rs  mod.rs  moead.rs  nsgaii.rs  round_robin.rs
src/alg/src/optimisation/operators/: binary.rs  constant_model.rs  constraint_aware.rs  length_used_model.rs  mapping.rs  mm1_model.rs  mm1k_model.rs  mod.rs  previous.rs  resources_model.rs  standard.rs
src/alg/src/utilities/: stopwatch.rs
src/misc/: prob_feasible.txt  problem_difficulty.m
src/processing/: TableCreator_Expansion.ods  TableCreator_HV.ods  TableCreator_Times.ods  fix_120.m  prop_full.m  test.txt  to_means.m
src/simulation/: run_sim.sh
with_red/: bibliography.bib  conclusions.tex  experiments.tex  introduction.tex  main.tex  makefile  optimisation.tex  problem_formulation.tex  related.tex  with_bibliography.bib
with_red/figures/: batch.sh  limited_expansion.tex  solution_representation.tex
(+123 files in other folders)
