[package]
name = "nfv_placement_model_journal"
version = "0.1.0"
authors = ["Joe Billingsley <jb@josephbillingsley.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
rand = "0.7.3"
chrono = "0.4"
rayon = "1.3.1"
rand_distr = "0.2"
clap = {version = "~2.27.0", features = ["yaml"]}
csv = "1.1"